RESOLVED FIXED229187
REGRESSION(r218083): [GStreamer] webrtc unexpected failures
https://bugs.webkit.org/show_bug.cgi?id=229187
Summary REGRESSION(r218083): [GStreamer] webrtc unexpected failures
Philippe Normand
Reported 2021-08-17 05:44:33 PDT
At least webrtc/vp9.html is affected.
Attachments
Patch (5.19 KB, patch)
2021-08-17 05:46 PDT, Philippe Normand
calvaris: review+
Philippe Normand
Comment 1 2021-08-17 05:46:52 PDT
Philippe Normand
Comment 2 2021-08-17 06:48:06 PDT
Radar WebKit Bug Importer
Comment 3 2021-08-17 06:49:17 PDT
Note You need to log in before you can comment on or make changes to this bug.