REGRESSION(r218083): [GStreamer] webrtc unexpected failures https://bugs.webkit.org/show_bug.cgi?id=229187

Reviewed by Xabier Rodriguez-Calvar.

The stream-collection messages actually don't need to be handled synchronously in the
mediastream cases. The limitations of the MSE backend do not apply there.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::handleStreamCollectionMessage):
(WebCore::MediaPlayerPrivateGStreamer::createGSTPlayBin):

Canonical link: https://commits.webkit.org/240589@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281135 268f45cc-cd09-0410-ab3c-d52691b4dbfc